--- a/libft/Makefile
+++ b/libft/Makefile
@@ -3,10 +3,10 @@
 #                                                         :::      ::::::::    #
 #    Makefile                                           :+:      :+:    :+:    #
 #                                                     +:+ +:+         +:+      #
-#    By: plashkar <marvin@42.fr>                    +#+  +:+       +#+         #
+#    By: plashkar <plashkar@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/04/14 17:00:19 by plashkar          #+#    #+#              #
-#    Updated: 2023/10/20 03:09:50 by plashkar         ###   ########.fr        #
+#    Updated: 2024/08/16 20:27:57 by plashkar         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -22,7 +22,7 @@ SRC = \
 	ft_tolower.c ft_isalpha.c ft_memset.c ft_split.c ft_strlcat.c ft_strnstr.c \
 	ft_toupper.c ft_printf_utils0.c ft_print_ptr.c ft_printf.c \
 	ft_printf_utils1.c get_next_line_bonus.c get_next_line_utils_bonus.c \
-	ft_strrncmp.c ft_countchar.c
+	ft_strrncmp.c ft_countchar.c ft_arrlen.c
 
 BSRC = \
 	ft_lstnew.c ft_lstadd_front.c ft_lstsize.c ft_lstlast.c ft_lstadd_back.c \
