--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,8 +5,8 @@
             "name": "Debug cub3D",
             "type": "cppdbg",
             "request": "launch",
-//            "program": "/home/mvalerio/Documents/Cub3D/cub3D",
-         "program": "/home/pouya/maggie<3/Cub3D/cub3D",
+            "program": "/home/mvalerio/Documents/Cub3D/cub3D",
+//        "program": "/home/pouya/maggie<3/Cub3D/cub3D",
             "args": [],
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}",
