--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,7 +3,8 @@
 		"cub3d.h": "c",
 		"math.h": "c",
 		"libft.h": "c",
-		"mlx.h": "c"
+		"mlx.h": "c",
+		"archive": "c"
 	},
 	"makefile.launchConfigurations": [
 		{
