--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,9 +5,10 @@
             "name": "Debug cub3D",
             "type": "cppdbg",
             "request": "launch",
-            "program": "/home/mvalerio/Documents/Cub3D_17Sep/cub3D",
+			"program": "/home/mvalerio/Documents/Cub3D/cub3D",
+//            "program": "/home/mvalerio/Documents/Cub3D_17Sep/cub3D",
 //        "program": "/home/pouya/maggie<3/Cub3D/cub3D",
-            "args": ["test_maps/valid_maps/map2.cub"],
+            "args": ["test_maps/valid_maps/map1.cub"],
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}",
             "environment": [],
